hphp/test/zend/bad/ext-gd/imagechar_error2.php
<?php

$result = imagechar(tmpfile(), 1, 5, 5, 'C', 1);

?>